<resources>
    <string name="app_name">淘宝短信解析</string>

    <!-- 启动页 -->
    <string name="splash_title">AgileDevKt测试工程</string>
    <string name="splash_check_permission_tips">请在权限页面打开应用所有权限</string>
    <string name="splash_check_permission_title">请确认已打开该应用使用的所有权限</string>
    <string name="splash_check_permission_confirm">已确认</string>
    <string name="splash_check_permission_unconfirmed">再次确认</string>
    <string name="splash_check_permission_cancel">请在设置中打开权限后重启应用</string>

    <string name="login_http">登录路径</string>
    <string name="login_http_hint">请输入登录路径</string>
    <string name="login_http_error">路径要以/结尾</string>
    <string name="login_account">账号</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="login_pswd">密码</string>
    <string name="login_pswd_hint">请输入密码</string>
    <string name="login_action">登录</string>

    <string name="notify_dialog_title">通知读取权限</string>
    <string name="notify_dialog_content">请开启通知读取权限</string>
    <string name="notify_dialog_positive">确定</string>
    <string name="notify_dialog_negative">退出</string>

    <string name="main_title">淘宝短信监听</string>
    <string name="main_account">当前代理账号：</string>
    <string name="main_tips">系统运行中，请勿退出</string>
    <string name="main_logout">切换账号</string>
    <string name="main_clear_cache">清空缓存</string>
    <string name="main_refresh">手动刷新</string>
    <string name="main_notify_app">消息来源：</string>
    <string name="main_notify_ticker">摘要：</string>
    <string name="main_notify_title">标题：</string>
    <string name="main_notify_content">内容：</string>

    <string name="sms_address">发信人：</string>
    <string name="sms_date">日期：</string>
    <string name="sms_body">内容：</string>
    <string name="sms_verification_code">验证码：</string>
    <string name="sms_card_number">卡号后4位：</string>
    <string name="sms_amount">金额：</string>

</resources>
