<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_address" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1008644" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_date" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2019-09-01 14:25:00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_verification_code" />

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1055478596" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_card_number" />

            <TextView
                android:id="@+id/card_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1234" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_amount" />

            <TextView
                android:id="@+id/amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2123.50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sms_body" />

            <TextView
                android:id="@+id/body_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="按實際丟千萬我歐誒哦親無誒歐千萬我歐塞到US我奧對偶千萬我偶爾接收到了看見阿斯利康昆蟲記裝下看春節快樂照相機出口量手机卡的就是" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black" />

</LinearLayout>